--- a/components/Howitworks/howitworks.module.css
+++ b/components/Howitworks/howitworks.module.css
@@ -104,11 +104,11 @@
   }
 
   .howitworks__title {
-    font-size: 28px;
+    /* font-size: 28px; */
   }
 
   .howitworks__box-title {
-    font-size: 22px;
+    /* font-size: 22px; */
   }
 
   .howitworks__box-text {
