--- a/app/globals.css
+++ b/app/globals.css
@@ -134,7 +134,7 @@ body {
   font-weight: 700;
   /* font-size: 58px; */
   /* Формула расчета адаптивного шрифта */
-  /* (размер шрифта mob версии + (размер шрифта desktop версии  - размер шрифта mob версии) * (100% ширины окна просмотра в vw - мобильная ширина экрана px) / на разницу между шириной desktop и шириной mob экрана) */
+  /*min (58px при увеличении экрана текст не будет увеличиваться больше этого размера) (размер шрифта mob версии + (размер шрифта desktop версии  - размер шрифта mob версии) * (100% ширины окна просмотра в vw - мобильная ширина экрана px) / на разницу между шириной desktop и шириной mob экрана) */
   font-size: min(58px, calc(32px + 26 * (100vw - 390px) / 1050));
   line-height: 64px; /* з токена lineHeights.3 */
   letter-spacing: 0;
@@ -167,9 +167,12 @@ body {
 .text24 {
   font-family: var(--ff-inter);
   font-weight: 400;
-  font-size: 24px;
+  font-size: min(24px, calc(20px + 4 * (100vw - 390px) / 1050));
   line-height: normal;
   letter-spacing: 0;
+}
+.text22 {
+    font-size: min(22px, calc(20px + 2 * (100vw - 390px) / 1050));
 }
 /* Main text → Text2-18Reg (Inter Regular, 18) */
 .text18 {
