--- a/app/setting/setting.module.css
+++ b/app/setting/setting.module.css
@@ -1,15 +1,9 @@
 /* Mobile first */
-.wrapper {
-  display: flex;
-  flex-direction: column; /* спочатку sidebar зверху */
-  width: 100%;
-  min-height: 100vh;
+.setting{
+  background-color: aqua;
+  display: inline-flex;
 }
 
-.imagesBlock {
-  flex: 1;
-  width: 100%;
-}
 
 /* Tablet (приблизно ≥768px) */
 @media (min-width: 768px) {
