--- a/app/register/register.module.css
+++ b/app/register/register.module.css
@@ -1,7 +1,8 @@
-.register {
-  width: 100%;
+.cover{
+display:inline-flex;
+column-gap: 20px;
+padding-top: 100px;
 }
 
-.imagesBlock {
-  width: 100%;
+.block{
 }
