--- a/components/Hero/hero.module.css
+++ b/components/Hero/hero.module.css
@@ -1,26 +1,17 @@
 .heroSection {
-  /* padding: 40px 20px; */
-}
-
-.container {
   max-width: 1248px;
   margin: 0 auto;
-  /* display: flex; */
-  /* justify-content: center; */
-  /* align-items: center; */
 }
 
 .hero {
-  margin-top: 80px;
   /* отступ под хедер  */
+  margin-top: 80px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  gap: 24px;
-  flex-wrap: wrap; /* щоб на мобілках блоки падали вниз */
-  padding-top: 121px;
-  /* padding-top: 92px; отступ с веху по макету */
-  /* padding-bottom: 57px; отступ внизу по макету  */
+  /* align-items: center; */
+  gap: 77px;
+  /* щоб на мобілках блоки падали вниз */
+  flex-wrap: wrap;
 }
 
 .hero__container {
@@ -30,37 +21,54 @@
 }
 
 .hero__title {
-  /* display: inline-block; */
-  background: linear-gradient(90deg, #6c63ff, #413b99);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  position: relative;
+  display: inline-block;
   color: transparent;
-  margin-bottom: 32px;
-  transition: all 0.3s ease;
+  background: linear-gradient(to right, #6c63ff, #413b99);
+  -webkit-background-clip: text;
+  background-clip: text;
 }
 
-.hero__title:hover {
-  background: linear-gradient(90deg, #6c63ff, #00bfa6);
+.hero__title::before {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, #6c63ff, #00bfa6);
+  -webkit-background-clip: text;
   background-clip: text;
+  color: transparent;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+  pointer-events: none;
 }
+
+.hero__title:hover::before {
+  opacity: 1;
+}
+
+
+
+
+
+
 
 .hero__text {
-  margin-bottom: 32px;
-  padding-right: 40px;
+  margin-bottom: 44px;
 }
 
 .hero__btn {
   padding: 12px 55px;
-  border-radius: 5px;
-  background-color: #6c63ff;
-  transition:
-    background 0.3s ease-in-out,
-    transform 0.2s ease-in-out;
+  color: white;
+  border-radius: 6px;
+  font-weight: 500;
+  background: linear-gradient(to right, #6c63ff, #6c63ff);
+  transition: background 0.3s ease, transform 0.2s ease-in-out;
 }
 
 .hero__btn:hover {
-  text-decoration-line: none;
   transform: scale(1.05);
   background: linear-gradient(to right, #6c63ff, #413b99);
 }
@@ -92,7 +100,7 @@
   }
 
   .hero__title {
-    /* font-size: 42px; */
+    font-size: 42px;
     line-height: 48px;
   }
 
