--- a/app/calendar/calendar.module.css
+++ b/app/calendar/calendar.module.css
@@ -4,6 +4,7 @@
   flex-direction: column; /* спочатку sidebar зверху */
   width: 100%;
   min-height: 100vh;
+  padding-top: 150px;
 }
 
 .imagesBlock {
