--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -5,8 +5,13 @@
 }
 
 .container {
+  max-width: 1248px;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
   flex-direction: column;
+  /* padding: 1rem 1.5rem; */
+  margin: auto;
   gap: 32px;
 }
 
@@ -20,6 +25,7 @@
 /* Заголовок завжди зліва */
 .subtitle {
   text-align: left;
+  margin-bottom: 11px;
 }
 
 /* Списки лінків */
@@ -28,11 +34,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 8px;
+  gap: 4px;
 }
 
 .navlink {
-  /* text-decoration: none; */
   text-decoration-line: none;
   color: var(--text-main);
   opacity: 0.8;
@@ -56,6 +61,12 @@
   text-align: center;
   color: var(--text-main);
   opacity: 0.6;
+  transition: opacity 0.2s ease-in;
+}
+
+.link:hover {
+  color: #131922;
+  opacity: 1;
 }
 
 .socialButton {
@@ -73,7 +84,7 @@
 
 .socialButton:hover {
   background: var(--gradient-linear);
-  transform: scale(1.05);
+  transform: scale(1.20);
 }
 
 .socialButton:active {
