--- a/app/register/register.module.css
+++ b/app/register/register.module.css
@@ -1,17 +1,30 @@
+.pageWrapper {
+  display: flex;
+  justify-content: center;
+}
 .cover {
   display: grid;
   grid-template-columns: 1fr;
+  height: 100hv;
 }
 
 .imgPart {
-  object-fit: cover;
+  display: flex;
+  justify-content: center; 
+  align-items: center;    
   width: 100%;
   height: 100%;
+}
+
+.imgPage {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover; 
 }
 .mainPart {
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  margin: 100px auto 0;
   width: 320px;
 }
 .registerText {
@@ -57,10 +70,18 @@
   line-height: 1.4;
   color: var(--color-primary);
 }
+.headLink{
+  display: flex;
+  align-items: center;
+max-width: 720px;
+margin-left: 65px;
+}
 @media (min-width: 768px) {
   .cover {
-    min-width: 768px;
+    width: 768px;
     grid-template-columns: 1fr 1fr;
+    flex-direction: row;
+    justify-content: center;
   }
   .mainPart {
     width: 360px;
@@ -76,7 +97,6 @@
 
 @media (min-width: 1440px) {
   .cover {
-    min-width: 1440px;
-    grid-template-columns: 1fr 1fr;
+    width: 1440px;
   }
 }
